test/libyul/yulSyntaxTests/for_visibility_7.yul
{
	for {} i {} { let i := 1 }
}
// ====
// dialect: evm
// ----
// DeclarationError 8198: (10-11): Identifier "i" not found.
